--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.0.17
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.0
+  firebase_core: ^2.4.1
 
 dev_dependencies:
   flutter_test:
