--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.0
   firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
