--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   audio_session: ^0.1.13
   flutter_localizations:
     sdk: flutter
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
