--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  firebase_messaging: ^14.2.2
+  flutter_local_notifications: ^8.2.0
 
 dev_dependencies:
   flutter_test:
