--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   intl: ^0.17.0
   firebase_messaging: ^14.2.2
   flutter_local_notifications: ^8.2.0
+  fluttertoast: ^8.2.1
+  vibration: ^1.7.6
 
 dev_dependencies:
   flutter_test:
